--- a/package.json
+++ b/package.json
@@ -2,18 +2,28 @@
   "name": "sit725-2024-t2-prac3",
   "version": "1.0.0",
   "main": "server_get.js",
+  "type": "module",
   "dependencies": {
+    "chai-http": "^5.0.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "express-validator": "^7.2.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.2",
     "nodemon": "^3.1.4",
-    "save": "^2.9.0"
+    "save": "^2.9.0",
+    "supertest": "^7.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --reporter spec",
     "start": "node server_get.js",
     "start:dev": "nodemon server_get.js"
+  },
+  "devDependencies": {
+    "chai": "^4.3.10",
+    "express": "^4.18.2",
+    "mocha": "^10.2.0",
+    "request": "^2.88.2"
   },
   "author": "",
   "license": "ISC",
