--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "dependencies": {
     "chai-http": "^5.0.0",
     "cors": "^2.8.5",
-    "express": "^4.19.2",
     "express-validator": "^7.2.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.2",
     "nodemon": "^3.1.4",
     "save": "^2.9.0",
+    "socket.io": "^4.7.5",
     "supertest": "^7.0.0"
   },
   "scripts": {
@@ -21,7 +21,7 @@
   },
   "devDependencies": {
     "chai": "^4.3.10",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "mocha": "^10.2.0",
     "request": "^2.88.2"
   },
